# Kats

./: pyproject.toml  requirements.txt  setup.py  test_requirements.txt
kats/tests/models/: test_theta_model.py
